# Nexus-Core

./: .eslintrc.cjs  .gitignore  CLAUDE.md  PRODUCT.md  README.md  deny.toml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/proto/: geosite.proto
src-tauri/src/: app.rs  lib.rs  main.rs
src-tauri/src/backup/: backup_manager.rs  mod.rs  restore_manager.rs
src-tauri/src/config/: config_manager.rs  mod.rs  models.rs
src-tauri/src/connection/: connection_manager.rs  connection_state.rs  connection_task.rs  mod.rs
src-tauri/src/core/: app_state.rs  core_manager.rs  mod.rs  resource_manager.rs  runtime.rs  task_manager.rs
src-tauri/src/core_installer/: core_downloader.rs  core_extractor.rs  core_registry.rs  core_state.rs  installer_manager.rs  integrity_checker.rs  mirror_manager.rs  mod.rs  release_provider.rs  rollback_manager.rs  update_manager.rs  version_manager.rs
src-tauri/src/diagnostics/: crash_report.rs  diagnostics_manager.rs  health_report.rs  mod.rs  system_report.rs
src-tauri/src/dispatcher/: dispatcher.rs  mod.rs  route_selector.rs
src-tauri/src/dns/: dns_cache.rs  dns_context.rs  dns_manager.rs  dns_record.rs  dns_state.rs  dns_trait.rs  doh_resolver.rs  dot_resolver.rs  mod.rs  system_resolver.rs
src-tauri/src/engine/: engine_context.rs  engine_event.rs  engine_factory.rs  engine_manager.rs  engine_registry.rs  engine_state.rs  engine_trait.rs  mod.rs  process_manager.rs  process_supervisor.rs
(+308 files in other folders)
