[package]
name = "nexus-core"
version = "2.4.1"
edition = "2021"
description = "Nexus Core - Production-grade network client backend"
authors = ["Nexus Core Team"]

[lib]
name = "nexus_core_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "nexus-core"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
bytes = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
parking_lot = "0.12"
arc-swap = "1"
thiserror = "1"
once_cell = "1"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
notify = { version = "7", features = ["macos_kqueue"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
sysinfo = "0.30"
tracing-appender = "0.2"
tokio-util = { version = "0.7", features = ["rt"] }
ipnet = "2"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
zip = "2"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
maxminddb = "0.24"
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
